--- a/schema/config-linux.json
+++ b/schema/config-linux.json
@@ -270,9 +270,19 @@
                 "id": "https://opencontainers.org/schema/bundle/linux/intelRdt",
                 "type": "object",
                 "properties": {
-                    "l3CacheSchema": {
-                        "id": "https://opencontainers.org/schema/bundle/linux/intelRdt/l3CacheSchema",
-                        "type": "string"
+                    "l3Cache": {
+                        "id": "https://opencontainers.org/schema/bundle/linux/intelRdt/l3Cache",
+                        "type": "array",
+                        "items": {
+                            "$ref": "defs-linux.json#/definitions/IntelRdtL3Cache"
+                        }
+                    },
+                    "memBandwidth": {
+                        "id": "https://opencontainers.org/schema/bundle/linux/intelRdt/memBandwidth",
+                        "type": "array",
+                        "items": {
+                            "$ref": "defs-linux.json#/definitions/IntelRdtMemBandwidth"
+                        }
                     }
                 }
             }
